--- a/app/views/twitter/search.scala.html
+++ b/app/views/twitter/search.scala.html
@@ -1,5 +1,5 @@
 @import java.util
-@(myForm: Form[Keyword], statuses: util.List[models.twitter.search.Status])
+@(myForm: Form[Keyword], statuses: util.List[models.twitter.Status])
 
 @master("Search on Twitter") {
 
