--- a/app/views/master.scala.html
+++ b/app/views/master.scala.html
@@ -16,7 +16,7 @@
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand">
-                        <a href="@routes.HomeController.index()">
+                        <a href="@routes.TwitterController.index()">
                             Tweet Analytics
                         </a>
                     </li>
