Integrate into current UI, documentation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
     <br /><br />
     We hope you will enjoy it!
     <br /><br />
-    Start <a href="@routes.TwitterController.searchForm()">
+    Start <a href="@routes.TwitterController.search()">
         searching
     </a> for tweets now!
     <br /><br />
