--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -1,33 +1,13 @@
-@import java.util
-@(myForm: Form[Keyword], searchResults: util.List[Status])
-
 @master("Search on Twitter") {
-    @if(flash.containsKey("error")) {
-        @flash.get("error")
-    }
+    <div id="search">
+        <form id="searchTweetsForm">
+            <input id="keyword" type="text" placeholder="Keywords">
+            <button type="submit" class="btn">Search Tweets</button>
+        </form>
 
-    @helper.form(action = routes.TwitterController.searchPost()) {
-        <dl id="keyword_field">
-            <dt><label for="keyword">Please enter the keyword of the tweets you want to search</label></dt>
-            <dd>
-                <input type="text" id="keyword" name="keyword" value="" placeholder="Keyword" />
-            </dd>
-        </dl>
+        <div id="placeholderText"></div>
 
-        <button type="submit">Search</button>
-    }
-
-    <br /><br />
-
-
-    <ul>
-    @if(searchResults.size() != 0) {
-        Here are your results. You can click on each user names to see their latest tweets.
-        <br /><br />
-    }
-
-    @for(status <- searchResults) {
-        <li><a href="@routes.TwitterController.profile(status.getUser.getScreenName)">@status.getUser.getScreenName</a> wrote: @status.getFullText</li>
-    }
-    </ul>
+        <ul id="tweetsList">
+        </ul>
+    </div>
 }
