100% test coverage for classes we wrote

--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -1,11 +1,11 @@
 @master("Search on Twitter") {
     <div id="search">
         <form id="searchTweetsForm">
-            <input id="keyword" type="text" placeholder="Keywords">
+            <input id="keyword" type="text" placeholder="Keywords" value="test">
             <button type="submit" class="btn">Search Tweets</button>
         </form>
 
-        <div id="placeholderText"></div>
+        <div id="placeholderText">Searching for tweets containing "test"</div>
 
         <ul id="tweetsList">
         </ul>
